# Keypoints

./: README.md  demon.py  infer_hourglass.py  train_hourglass_coco.py  train_hourglass_mpii.py
checkpoints/mpii/: readme.txt
config/: config_hourglass_coco.py  config_hourglass_mpii.py
core/dataset/: data_augment.py  data_generator.py  dataset_utils.py  keypoints.py
core/infer/: __init__.py  freeze_graph.py  infer.py  infer_utils.py  visual_utils.py
core/loss/: loss.py
core/network/: centernet.py  hourglass.py  keypoints.py  network_utils.py
core/train/: trainer.py
data/dataset/: readme.txt
output/mpii/: readme.txt
script/: __init__.py  ckpt2ckpt.py  coco2txt.py  mpii2coco.py  parse_ckpt.py
tensorRT/: __init__.py  pb2uff.py  readpb2graph.py  tfpb2trtpb.py
tensorRT/c++/: CMakeLists.txt  Keypoints_main.cpp
tensorRT/c++/source/: ResizeNearestNeighbor.cpp  ResizeNearestNeighbor.cu  ResizeNearestNeighbor.h  keypoints_tensorrt.cpp  keypoints_tensorrt.h  my_plugin.cpp  my_plugin.h  utils.cpp  utils.h
tensorRT/python/: __init__.py  pb2uff.py  tfpb2trtpb.py
